Updated content in farming_cores.html. Updating the table header spacing in cores_list.html. fixed spelling errors in armor_texts, weapon_texts, misc_texts, and recommended_missions .html files.

--- a/css/output.css
+++ b/css/output.css
@@ -730,6 +730,10 @@ video {
   max-width: 250px;
 }
 
+.max-w-\[200px\] {
+  max-width: 200px;
+}
+
 .grow {
   flex-grow: 1;
 }
